--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
+include 'stream-reader'
+include 'segment-parser'
 include 'hj-t212-parser'
 include 'hj-t212-translator'
 
 rootProject.name = 'hj-t212-parser'
 project(':hj-t212-parser').projectDir = new File('hj-t212-parser')
 project(':hj-t212-translator').projectDir = new File('translator')
+
