--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,19 @@ buildscript {
     }
     repositories {
         mavenCentral()
-        maven { url 'http://repo.spring.io/plugins-release' }
+//        jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+//        maven { url 'http://repo.spring.io/plugins-release' }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("io.spring.gradle:dependency-management-plugin:1.0.2.RELEASE")
+//        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+//        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
+//        classpath("io.spring.gradle:dependency-management-plugin:1.0.2.RELEASE")
         classpath("com.github.ksoichiro:gradle-build-info-plugin:0.2.0")
-        classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
         classpath 'net.researchgate:gradle-release:2.4.0'
+        classpath "me.champeau.gradle:jmh-gradle-plugin:0.4.5"
     }
 }
 
@@ -91,6 +96,7 @@ project(':hj-t212-parser') {
 
     apply plugin: 'java'
     apply plugin: 'maven-publish'
+    apply plugin: "me.champeau.gradle.jmh"
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -102,26 +108,35 @@ project(':hj-t212-parser') {
     dependencies {
 
         compile project(':segment-parser')
-        // JSON
+        //JSON
         compile group: 'javax.json.bind', name: 'javax.json.bind-api', version: '1.0'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.3'
-
-
-        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
         compile group: 'org.eclipse', name: 'yasson', version: '1.0.1'
-
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
+        //Validation
         compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
-
-
+        //OAI
         compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.10'
+
         //Test
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile 'org.reflections:reflections:0.9.11'
-        testCompile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
-        testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+        testCompile 'ch.qos.logback:logback-core:1.2.3'
+        testCompile 'ch.qos.logback:logback-classic:1.2.3'
         testCompile 'org.hibernate.validator:hibernate-validator:6.0.2.Final'
         testCompile 'javax.el:javax.el-api:2.2.4'
         testCompile 'org.glassfish.web:javax.el:2.2.4'
+        testCompile 'org.reflections:reflections:0.9.11'
+        testCompile 'org.openjdk.jmh:jmh-core:1.15'
+        testCompile 'org.openjdk.jmh:jmh-generator-annprocess:1.15'
+
+        //JMH
+        jmh 'org.openjdk.jmh:jmh-core:1.15'
+        jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.15'
+        jmh 'org.reflections:reflections:0.9.11'
+        jmh 'ch.qos.logback:logback-core:1.2.3'
+        jmh 'ch.qos.logback:logback-classic:1.2.3'
+
     }
 }
 
